--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection", content="telephone=no" />
     <meta name="format-detection", content="address=no" />
     <title>RBAC: Role Based Access Control -- Jack Q</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
