--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport , content="width=device-width,initial-scale=1,minimum-scale=1,user-scalable=no,maximum-scale=1"><meta name=format-detection , content="telephone=no"><meta name=format-detection , content="address=no"><title>RBAC: Role Based Access Control -- Jack Q</title><link href="https://fonts.googleapis.com/css?family=Lato|Material+Icons" rel=stylesheet><link href=/static/css/app.4dd6389537a4179575e5d817c0b486c9.css rel=stylesheet></head><body><div id=app></div><script>if(!window.ga){
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport , content="width=device-width,initial-scale=1,minimum-scale=1,user-scalable=no,maximum-scale=1"><meta name=format-detection , content="telephone=no"><meta name=format-detection , content="address=no"><title>RBAC: Role Based Access Control -- Jack Q</title><link href="https://fonts.googleapis.com/css?family=Lato|Material+Icons" rel=stylesheet><link href=/rbac/static/css/app.4dd6389537a4179575e5d817c0b486c9.css rel=stylesheet></head><body><div id=app></div><script>if(!window.ga){
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -6,4 +6,4 @@
 
         ga('create', 'UA-63336636-1', 'auto');
         ga('send', 'pageview');
-      }</script><script type=text/javascript src=/static/js/manifest.c30eddafce2a87ae6bb9.js></script><script type=text/javascript src=/static/js/vendor.5e3abeef4eceacbe9a78.js></script><script type=text/javascript src=/static/js/app.e4c92b014557fcf76a03.js></script></body></html>
+      }</script><script type=text/javascript src=/rbac/static/js/manifest.913a952744a15c8d9fda.js></script><script type=text/javascript src=/rbac/static/js/vendor.5e3abeef4eceacbe9a78.js></script><script type=text/javascript src=/rbac/static/js/app.e4c92b014557fcf76a03.js></script></body></html>
