--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport", content="width=device-width,initial-scale=1, minimum-scale=1,user-scalable=no,maximum-scale=1" />
-    <meta name="format-detection", content="telephone=no" />
-    <meta name="format-detection", content="address=no" />
+    <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1,user-scalable=no,maximum-scale=1" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="address=no" />
+    <meta name="theme-color" content="#cccccc" />
     <title>RBAC: Role Based Access Control -- Jack Q</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Material+Icons" rel="stylesheet">
   </head>
